1400px to 1100 px media Query Fix

--- a/AboutPage.css
+++ b/AboutPage.css
@@ -53,10 +53,18 @@ html, body {
 /* Wrapper */
 .wrapper {
     max-width: 1500px;
-    background-color: #E6FFD4;
+    background-color: #fffbce;
     margin: 0 auto;
     overflow: hidden; /* Ensure no overflow issues */
 }
+
+
+
+
+
+
+
+
 
 
 /* Navigation */
@@ -77,7 +85,7 @@ html, body {
 }
 
 .desktop-nav a {
-    color: #fff;
+    color: #effded;
     font-family: Roboto Reg;
     font-size: 16px;
     text-transform: uppercase;
@@ -92,7 +100,7 @@ html, body {
 
 /* Navigation Section */
 .nav-section {
-    background-color: #a6ff67;
+    background-color: #1b5e20;
     padding: 10px 20px;
     display: flex;
     justify-content: center; /* Center the container */
@@ -116,7 +124,7 @@ html, body {
     font-size: 40px;
     font-weight: bold;
     margin: 0;
-    color: #000000;
+    color: #effded;
 }
 
 /* Desktop Navigation */
@@ -142,8 +150,8 @@ html, body {
 
 /* Enhanced Navigation Link Hover */
 .desktop-nav a {
-    color: #fff;
-    font-family: Roboto;
+    color: #effded;
+    font-family: Roboto Reg;
     font-size: 20px;
     text-transform: uppercase;
     padding: 10px 20px;
@@ -153,8 +161,9 @@ html, body {
 }
 
 .desktop-nav a:hover {
-    color: #000;
-    transform: scale(1.1); /* Slightly enlarges the link */
+    color: #effded;
+    transform: scale(1.2); /* Scale up the font size slightly */
+    font-family: Roboto Med; /* Change font weight smoothly */
 }
 
 /* Underline Animation */
@@ -165,7 +174,7 @@ html, body {
     bottom: 0;
     width: 0;
     height: 2px;
-    background-color: #000; /* Color of the underline */
+    background-color: #effded; /* Color of the underline */
     transition: width 0.3s ease;
 }
 
@@ -190,7 +199,16 @@ html, body {
     margin-top: 80px; /* Adjust this to match the height of your navigation bar */
 }
 
+/* Active Navigation Link */
+.desktop-nav a.active {
+    color: #effded;
+    transform: scale(1.2); /* Scale up the font size slightly */
+    font-family: Roboto Med; /* Change font weight smoothly */
+}
 
+.desktop-nav a.active::after {
+    width: 100%; /* Expands the underline */
+}
 
 
 
@@ -202,8 +220,7 @@ html, body {
 /* About Section */
 .about-section {
     text-align: center; /* Center-align text by default */
-    background-color: #E6FFD4;
-    padding-top: 40px;
+    background-color: #fffbce;
 }
 
 /* About Container */
@@ -211,7 +228,7 @@ html, body {
     max-width: 1500px; 
     margin: 0 auto; 
     padding: 10px;
-    margin-top: 20px;
+    padding-top: 70px;
 }
 /* History Content */
 .history-content{
@@ -235,6 +252,25 @@ html, body {
     margin-top: 50px;
 }
 
+/* Highlighted text styling */
+.highlight {
+    color: #1b5e20; /* Dark green for emphasis */
+    font-weight: bold;
+    background-color: rgba(211, 47, 47, 0.1); /* Light red highlight */
+    padding: 2px 4px;
+    border-radius: 3px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+/* Hover effect for highlighted text */
+.highlight:hover {
+    background-color: rgba(51, 150, 48, 0.2); /* Slightly darker green highlight */
+    color: #1d7431; /* Darker green text */
+    cursor: pointer; /* Makes it feel interactive */
+}
+
+
+
 /* Rectangle shape behind images */
 .about-images {
     position: relative;
@@ -248,7 +284,7 @@ html, body {
     left: 230px;
     width: 230px;
     height: 290px;
-    background-color: #79fa1d;
+    background-color: #1b5e20;
     z-index: 1;
     border-radius: 20px;
     transform: translate(-20px, 30px);
@@ -294,21 +330,15 @@ html, body {
 }
 
 /* About Title */
-.about-title h1 {
-    font-family: Playfair;
-    font-size: 45px; 
-    font-weight: bold;
-    color: #000; 
-    margin-bottom: 20px;
-    transition: transform 0.3s ease;
-}
+
 
 .about-title h1 {
     font-family: 'Playfair Display', serif; /* Ensure the font is properly referenced */
     font-size: 3.5rem; 
     font-weight: bold;
-    color: #000; 
+    color: #1b5e20; 
     margin-bottom: 20px;
+    margin-top: -10px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Add a subtle shadow for depth */
     letter-spacing: 1px; /* Slightly increase letter spacing for readability */
     transition: transform 0.3s ease, color 0.3s ease; /* Add color transition */
@@ -316,7 +346,7 @@ html, body {
 
 .about-title h1:hover {
     transform: scale(1.05); /* Slightly enlarge on hover */
-    color: #28a745; /* Change color to green on hover, matching your theme */
+    color: #51c155; /* Change color to green on hover, matching your theme */
 }
 
 
@@ -352,7 +382,7 @@ html, body {
 /* Right side: Text styling */
 .about-text {
     flex: 1; /* Adjust to allow equal spacing if needed */
-    color: #000000;
+    color: #1b5e20;
     margin: 0 auto; /* Center horizontally */
     text-align: center; /* Centers the text inside the box */
     display: flex; /* Enables flexbox for centering */
@@ -368,7 +398,7 @@ html, body {
     font-family: Playfair;
     font-size: 1.8rem;
     font-weight: bold;
-    color: #000000; /* Blue shade for distinction */
+    color: #1b5e20; /* Blue shade for distinction */
     margin: 10px;
 }
 
@@ -378,31 +408,39 @@ html, body {
     font-family: Playfair;
     font-size: 20px;
     font-weight: bold;
-    color: #000; /* Slightly lighter than black */
+    color: #1b5e20; /* Slightly lighter than black */
     margin-bottom: 10px;
 }
 
+.short-story-content h3 {
+    font-family: Playfair;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #1b5e20; /* Slightly lighter than black */
+    margin-bottom: 12px;
+}
+
 .short-story-content p {
-    font-family: Opensans Light;
-    font-size: 1rem;
-    line-height: 1.8; /* Improve readability with better line height */
-    color: #000; /* Neutral gray for text */
+    font-family: "Open Sans";
+    font-size: 1.2rem;
+    font-weight: 300;
+    line-height: 1.8;
+    color: #1b5e20; 
     text-align: justify; /* Justify text for a clean block look */
     margin-left: 150px;
     margin-right: 150px;
     margin-bottom: 30px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
 }
-
-
-
 
 /* Continue Reading Button */
 .continue-reading-btn {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #A6FF67; /* Blue button */
-    color: #000;
-    font-family: 'Arial', sans-serif;
+    background-color: #386c5f;
+    border: 1px solid #386c5f;
+    color: #ffffff;
+    font-family: Roboto Reg;
     font-size: 1rem;
     font-weight: bold;
     border: none;
@@ -412,9 +450,14 @@ html, body {
 }
 
 .continue-reading-btn:hover {
-    background-color: #65ff36; /* Darker blue on hover */
+    background-color: #1b5e20;
+    border-color: #1b5e20;
     transform: scale(1.05);
 }
+
+
+
+
 
 
 
@@ -431,23 +474,23 @@ html, body {
     margin: 0 auto;
     flex-wrap: wrap; 
     gap: 10px;
-    opacity: 1; /* Ensure visibility */
+    opacity: 1; 
     transform: translateY(0); 
     transition: all 0.8s ease;
     margin-top: 100px;
 }
 
-/* Text Section */
+/* Text Section!!!!!! */
 .culture-text {
     flex: 3; 
-    color: #000000;
-    text-align: cen; /* Align text to the left */
+    color: #1b5e20;
+    text-align: cen; 
     display: flex; 
     flex-direction: column; 
     justify-content: center; 
-    align-items: flex-start; /* Align content to the start (left) */
-    padding: 20px; /* Add padding for spacing */
-    margin: 0; /* Remove unnecessary margins */
+    align-items: flex-start; 
+    padding: 20px; 
+    margin: 0; 
     margin-right: -150px;
     margin-left: -50px;
     margin-top: 20px;
@@ -458,11 +501,10 @@ html, body {
     font-family: Playfair;
     font-size: 1.8rem;
     font-weight: bold;
-    color: #000; /* Slightly lighter than black */
+    color: #1b5e20; /* Slightly lighter than black */
     margin-bottom: 10px;
     margin-left: 400px;
 }
-
 
 /* Image Section */
 .culture-images {
@@ -481,7 +523,7 @@ html, body {
     right: 20; /* Align the shape closer to the images */
     width: 230px;
     height: 290px;
-    background-color: #79fa1d;
+    background-color: #1b5e20;
     z-index: 1;
     border-radius: 20px;
     transform: translate(20px, 30px);
@@ -536,16 +578,15 @@ html, body {
 
 /* Culture Section Styling */
 
-
 .culture-section .culture-type-title {
 margin-top: 60px;
 }
 
 .culture-type-title h1 {
     font-family: 'Playfair Display', serif; /* Ensure the font is properly referenced */
-    font-size: 45px; 
+    font-size: 3.5rem; 
     font-weight: bold;
-    color: #000; 
+    color: #1b5e20; 
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Add a subtle shadow for depth */
     letter-spacing: 1px; /* Slightly increase letter spacing for readability */
     transition: transform 0.3s ease, color 0.3s ease; /* Add color transition */
@@ -553,16 +594,21 @@ margin-top: 60px;
 
 .culture-type-title h1:hover {
     transform: scale(1.05); /* Slightly enlarge on hover */
-    color: #28a745; /* Change color to green on hover */
+    color: #51c155; /* Change color to green on hover */
 }
 
 .culture-wrapper {
     width: 100%;
-    height: 85vh;
+    min-height: 500px; /* Allow dynamic height */
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap; /* Helps prevent overflow issues */
+    margin-top: 70px;
+    padding-bottom: 30px;
+    padding-bottom: 80px;
 }
+
 
 .culture-container {
     height: 500px;
@@ -582,7 +628,7 @@ margin-top: 60px;
     display: flex;
     align-items: flex-end;
     transition: .6s cubic-bezier(.28,-0.03,0,.99);
-    box-shadow: 0 30px 50px #4f9a45;
+    box-shadow: 0 30px 50px #51c155;
 }
 
 .card > .row {
@@ -593,7 +639,7 @@ margin-top: 60px;
 }
 
 .card > .row > .icon {
-    background: #50ba50;;
+    background: #51c155;;
     color: white;
     font-size: 1rem;
     border-radius: 50%;
@@ -662,17 +708,17 @@ input:checked + label .description {
 /* Geography Section Styling */
 .geography-section {
     padding: 40px;
-    background-color: #E6FFD4; /* Light green background */
+    background-color: #fffbce; /* Light green background */
     text-align: center;
-    max-height: 1300px;
+    max-height: 1220px;
 }
 
 
 /* Section Title */
 .section-title {
-    font-size: 40px;
+    font-size: 3.5rem;
     font-family: 'Playfair Display', serif; /* Ensure the font is properly referenced */
-    color: #000000;
+    color: #1b5e20;
     margin-bottom: 20px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Add a subtle shadow for depth */
     letter-spacing: 1px; /* Slightly increase letter spacing for readability */
@@ -681,7 +727,7 @@ input:checked + label .description {
 
 .section-title:hover {
     transform: scale(1.05); /* Slightly enlarge on hover */
-    color: #28a745; /* Change color to green on hover, matching your theme */
+    color: #51c155; /* Change color to green on hover, matching your theme */
 }
 
 
@@ -697,13 +743,17 @@ input:checked + label .description {
 /* Text Content Styling */
 .geography-text {
     flex: 1;
+    font-family: "Open Sans";
     margin-left: 80px;
     max-width: 50%;
     text-align: left;
     font-size: 1.2rem;
-    font-family: Opensans Light;
     line-height: 1.6;
     color: #000000;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    font-weight: 300;
+    line-height: 1.8; 
+    text-align: justify;
 }
 
 /* Geography-Text2 Styling (Specific to the 2nd Section) */
@@ -713,9 +763,30 @@ input:checked + label .description {
     max-width: 50%;
     text-align: left;
     font-size: 1.2rem;
-    font-family: Opensans Light;
+    font-family: "Open Sans";
     line-height: 1.6;
     color: #000000; /* Slightly darker text for contrast */
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    font-weight: 300;
+    line-height: 1.8; 
+    text-align: justify;
+    margin-bottom: -30px;
+}
+
+.highlight {
+    color: #386c5f; /* Dark green for emphasis */
+    font-weight: bold;
+    background-color: rgba(211, 47, 47, 0.1); /* Light red highlight */
+    padding: 2px 4px;
+    border-radius: 3px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+/* Hover effect for highlighted text */
+.highlight:hover {
+    background-color: rgba(51, 150, 48, 0.2); /* Slightly darker green highlight */
+    color: #1d7431; /* Darker green text */
+    cursor: pointer; /* Makes it feel interactive */
 }
 
 /* Button Styling */
@@ -767,10 +838,12 @@ input:checked + label .description {
 
 
 
+
+
 /* Footer Section */
 .footer-section {
-    background-color: #28a745; /* Darker green tone for contrast */
-    color: #ffffff; /* Accent color for text */
+    background-color: #1b5e20; /* Darker green tone for contrast */
+    color: #effded;
     padding: 4rem 0 8rem;
     position: relative;
     font-family: 'Roboto', sans-serif;
@@ -808,7 +881,7 @@ input:checked + label .description {
 
 .hotlines-column h2 {
     font-size: 1.5rem;
-    color: #ffffff;
+    color: #effded;
     margin: 2rem 0;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -837,7 +910,7 @@ input:checked + label .description {
 .hotlines-list li strong {
     display: block;
     margin-bottom: 0.5rem;
-    color: #FFFFFF;
+    color: #effded;
 }
 
 .hotlines-list li img.footer-icon {
@@ -856,7 +929,7 @@ input:checked + label .description {
 
 .quick-links-column h2 {
     font-size: 1.5rem;
-    color: #ffffff;
+    color: #effded;
     margin: 2rem 0;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -868,7 +941,7 @@ input:checked + label .description {
 }
 
 .quick-links-list li a {
-    color: #ffffff;
+    color: #effded;
     text-decoration: none;
     padding: 0.8rem;
     border-radius: 8px;
@@ -884,7 +957,7 @@ input:checked + label .description {
     top: 0;
     width: 3px;
     height: 100%;
-    background: #A6FF67;
+    background: #51c155;
     transform: scaleY(0);
     transition: transform 0.2s ease;
 }
